tests/baselines/reference/generatorTypeCheck24.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck24.ts(6,13): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck24.ts(9,12): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck24.ts(10,12): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck24.ts (3 errors) ====
    class Foo { x: number }
    class Bar extends Foo { y: string }
    class Baz { z: number }
    function* g3() {
        yield;
        yield * [new Foo];
                ~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        yield new Bar;
        yield new Baz;
        yield *[new Bar];
               ~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        yield *[new Baz];
               ~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    }